--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@react-spring/types": "^9.7.5",
+    "@react-spring/web": "^9.7.4",
     "@remotion/cli": "4.0.216",
+    "@remotion/tailwind": "4.0.216",
     "@remotion/zod-types": "4.0.216",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-use-measure": "^2.1.1",
     "remotion": "4.0.216",
-    "zod": "3.22.3",
-    "@remotion/tailwind": "4.0.216"
+    "zod": "3.22.3"
   },
   "devDependencies": {
     "@remotion/eslint-config": "4.0.216",
